--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -18,8 +18,9 @@
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="wNc-sj-BlU" kind="relationship" relationship="viewControllers" id="o3W-CH-989"/>
-                        <segue destination="pmW-Fp-So0" kind="relationship" relationship="viewControllers" id="xbT-Cw-Cx5"/>
+                        <segue destination="wNc-sj-BlU" kind="relationship" relationship="viewControllers" id="9jo-1u-AOR"/>
+                        <segue destination="LgM-iV-OHb" kind="relationship" relationship="viewControllers" id="rQo-FB-b8K"/>
+                        <segue destination="pmW-Fp-So0" kind="relationship" relationship="viewControllers" id="uHv-PE-R5X"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Opp-0M-dPy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -34,7 +35,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4he-fG-6IB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3978" y="88"/>
+            <point key="canvasLocation" x="3983" y="-54"/>
+        </scene>
+        <!--HealthChartsView-->
+        <scene sceneID="MkZ-gA-Bq3">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="HealthChartsViewController" storyboardName="HealthChartsView" id="LgM-iV-OHb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="5uA-hd-KRd"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FOv-NQ-873" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4009" y="88"/>
         </scene>
         <!--ProfileView-->
         <scene sceneID="cfU-cD-I83">
@@ -44,7 +55,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q2Z-Qw-aBX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3979" y="-90"/>
+            <point key="canvasLocation" x="3979" y="210"/>
         </scene>
     </scenes>
 </document>
