--- a/pppppp/View/ChartsView/HealthChartsView.storyboard
+++ b/pppppp/View/ChartsView/HealthChartsView.storyboard
@@ -1,30 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="t1e-mL-vfJ">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="F5.6-Regular.otf">
+            <string>F5.6-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Health-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HealthChartsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="HealthChartsViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16Q-Vw-NNY">
+                                <rect key="frame" x="0.0" y="214" width="390" height="547"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIV-ce-rvU">
+                                        <rect key="frame" x="24" y="16" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="平均" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Um-Y0-P7z">
+                                        <rect key="frame" x="24" y="0.0" width="28.666666666666671" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="0.71828435430000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="tintColor" red="0.57254901960000004" green="0.69803921570000005" blue="0.82745098039999998" alpha="0.6437293046" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="xIV-ce-rvU" firstAttribute="top" secondItem="16Q-Vw-NNY" secondAttribute="top" constant="16" id="0EJ-t3-rgK"/>
+                                    <constraint firstItem="8Um-Y0-P7z" firstAttribute="leading" secondItem="16Q-Vw-NNY" secondAttribute="leading" constant="24" id="oBj-JL-rLS"/>
+                                    <constraint firstItem="8Um-Y0-P7z" firstAttribute="top" secondItem="16Q-Vw-NNY" secondAttribute="top" id="phi-Rl-AOC"/>
+                                    <constraint firstItem="xIV-ce-rvU" firstAttribute="leading" secondItem="16Q-Vw-NNY" secondAttribute="leading" constant="24" id="yF5-9j-NhV"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pLN-Ip-js5">
+                                <rect key="frame" x="24" y="159" width="342" height="32"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="16Q-Vw-NNY" firstAttribute="top" secondItem="pLN-Ip-js5" secondAttribute="bottom" constant="24" id="6Gi-yh-4zx"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pLN-Ip-js5" secondAttribute="trailing" constant="24" id="GgM-JF-atp"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="16Q-Vw-NNY" secondAttribute="bottom" id="JTt-vm-7RF"/>
+                            <constraint firstItem="pLN-Ip-js5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="Mxp-Nm-RXQ"/>
+                            <constraint firstItem="16Q-Vw-NNY" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailing" id="OCV-OF-mHW"/>
+                            <constraint firstItem="16Q-Vw-NNY" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="mrR-Vj-lXN"/>
+                            <constraint firstItem="pLN-Ip-js5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="oIz-1w-muz"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Health" id="0LO-kk-QRb"/>
+                    <connections>
+                        <outlet property="averageStepLabel" destination="xIV-ce-rvU" id="Isd-ux-LlK"/>
+                        <outlet property="stepChartsView" destination="16Q-Vw-NNY" id="1ru-cA-MFd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="998.46153846153845" y="-2.1327014218009479"/>
+        </scene>
+        <!--Health-->
+        <scene sceneID="ff2-ca-hzw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="t1e-mL-vfJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Health" image="heart" catalog="system" id="rnI-tX-1M0"/>
+                    <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="4Vj-41-eIC">
+                        <rect key="frame" x="0.0" y="47" width="390" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="suP-FN-r5b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sOq-91-jmi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="69.230769230769226" y="-2.1327014218009479"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="heart" catalog="system" width="128" height="107"/>
     </resources>
 </document>
