--- a/pppppp/View/ChartsView/HealthChartsView.storyboard
+++ b/pppppp/View/ChartsView/HealthChartsView.storyboard
@@ -20,8 +20,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ave-Vq-Qlt">
+                                <rect key="frame" x="0.0" y="215" width="390" height="546"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QvW-0E-cp6" userLabel="Today">
+                                        <rect key="frame" x="24.000000000000004" y="0.0" width="47.333333333333343" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="0.71828435430000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iav-bd-IAb">
+                                        <rect key="frame" x="24" y="16" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.57254901960000004" green="0.69803921570000005" blue="0.82745098039999998" alpha="0.6437293046" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iav-bd-IAb" firstAttribute="top" secondItem="ave-Vq-Qlt" secondAttribute="top" constant="16" id="7N0-LL-Tnt"/>
+                                    <constraint firstItem="QvW-0E-cp6" firstAttribute="leading" secondItem="ave-Vq-Qlt" secondAttribute="leading" constant="24" id="9O4-fq-VUm"/>
+                                    <constraint firstItem="QvW-0E-cp6" firstAttribute="top" secondItem="ave-Vq-Qlt" secondAttribute="top" id="Zgf-eP-A94"/>
+                                    <constraint firstItem="iav-bd-IAb" firstAttribute="leading" secondItem="ave-Vq-Qlt" secondAttribute="leading" constant="24" id="n7j-DC-ECy"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16Q-Vw-NNY">
-                                <rect key="frame" x="0.0" y="214" width="390" height="547"/>
+                                <rect key="frame" x="0.0" y="215" width="390" height="546"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIV-ce-rvU">
                                         <rect key="frame" x="24" y="16" width="0.0" height="0.0"/>
@@ -45,22 +70,32 @@
                                 </constraints>
                             </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pLN-Ip-js5">
-                                <rect key="frame" x="24" y="159" width="342" height="32"/>
+                                <rect key="frame" x="24" y="159" width="342" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="kvh-vV-7ET"/>
+                                </constraints>
                                 <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
+                                    <segment title="Step"/>
+                                    <segment title="weight"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentValueChangedWithSender:" destination="Y6W-OH-hqX" eventType="valueChanged" id="zET-DQ-Ev0"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ave-Vq-Qlt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="0g4-7Q-Wdr"/>
+                            <constraint firstAttribute="trailing" secondItem="ave-Vq-Qlt" secondAttribute="trailing" id="3u6-ig-Sg9"/>
                             <constraint firstItem="16Q-Vw-NNY" firstAttribute="top" secondItem="pLN-Ip-js5" secondAttribute="bottom" constant="24" id="6Gi-yh-4zx"/>
+                            <constraint firstItem="ave-Vq-Qlt" firstAttribute="top" secondItem="pLN-Ip-js5" secondAttribute="bottom" constant="24" id="6KE-Uz-hTt"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pLN-Ip-js5" secondAttribute="trailing" constant="24" id="GgM-JF-atp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="16Q-Vw-NNY" secondAttribute="bottom" id="JTt-vm-7RF"/>
                             <constraint firstItem="pLN-Ip-js5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="16" id="Mxp-Nm-RXQ"/>
                             <constraint firstItem="16Q-Vw-NNY" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailing" id="OCV-OF-mHW"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ave-Vq-Qlt" secondAttribute="bottom" id="fxv-S7-Bca"/>
                             <constraint firstItem="16Q-Vw-NNY" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="mrR-Vj-lXN"/>
                             <constraint firstItem="pLN-Ip-js5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="oIz-1w-muz"/>
                         </constraints>
@@ -69,6 +104,8 @@
                     <connections>
                         <outlet property="averageStepLabel" destination="xIV-ce-rvU" id="Isd-ux-LlK"/>
                         <outlet property="stepChartsView" destination="16Q-Vw-NNY" id="1ru-cA-MFd"/>
+                        <outlet property="todayWeightLabel" destination="iav-bd-IAb" id="Xeb-Ft-MPT"/>
+                        <outlet property="weightChartsView" destination="ave-Vq-Qlt" id="DV6-PP-iIO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
